# truncated-pareto-numpyro

./: LICENSE  README.md  pyproject.toml  run.ipynb
truncated_pareto/: __init__.py  truncated_pareto.py
