[tool.poetry]
name = "truncated_pareto"
version = "0.1.0"
description = ""
authors = ["tn1031 <ttt.nakamura1031@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpyro = "^0.16.1"
jupyter = "^1.1.1"
matplotlib = "^3.9.3"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^5.13.2"
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
